# marathon-client

./: .gitignore  README.md  docker-compose.marathon.yml  docker-compose.yml  marathon.cabal
examples/: marathon-examples.cabal  stack.yaml
examples/src/: Apps.hs  Common.hs
src/: Marathon.hs
src/Marathon/: Request.hs
src/Marathon/Data/: App.hs  Config.hs  Container.hs  Docker.hs  Error.hs  HealthCheck.hs  Parameter.hs  Port.hs  Task.hs  UpgradeStrategy.hs  Volume.hs
src/Marathon/Endpoints/: Apps.hs
