name:                marathon
version:             0.1.0.0
synopsis:            Access to Marathon API.
description:         Please see README.md
homepage:            http://github.com/monstrs/marathon-client#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          AndreyLinko@gmail.com
copyright:           2016 Andrey Linko
category:            Network
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010

  exposed-modules:
    Marathon
    Marathon.Data.App
    Marathon.Data.Config
    Marathon.Data.Container
    Marathon.Data.Docker
    Marathon.Data.Error
    Marathon.Data.HealthCheck
    Marathon.Data.Parameter
    Marathon.Data.Port
    Marathon.Data.Task
    Marathon.Data.UpgradeStrategy
    Marathon.Data.Volume
    Marathon.Endpoints.Apps
    Marathon.Request

  build-depends:       base                    >=4.7      && <5
                       , wreq                  >=0.4.1.0  && <0.5
                       , lens                  >=4.5      && <5
                       , lens-aeson            >=1.0.0.5  && <2.1
                       , bytestring            >=0.10.4.0 && <0.11
                       , http-client           >=0.4.8.1  && <0.5
                       , containers            >=0.5.5.1  && <0.6
                       , transformers          >=0.3.0.0  && <0.6
                       , transformers-compat   >=0.4.0.3  && <0.6
                       , mtl                   >=2.1.3.1  && <2.3
                       , aeson                 >=0.7.0.6  && <0.11
                       , aeson-compat          >=0.3.0.0  && <0.4
                       , unordered-containers  >=0.2      && <0.3
                       , text                  >=1.2.0.6  && <1.3

source-repository head
  type:     git
  location: https://github.com/monstrs/marathon-client
