name:                marathon-examples
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  build-depends:
      base
    , base-compat
    , marathon
    , yaml
    , aeson
    , bytestring
  default-language:    Haskell2010
  exposed-modules:
    Common
    Apps
